# manim-opengl-colab

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
examples/: 01_square_to_circle.py  02_gpu_animation_test.py  03_formula.py  README.md  demo.py
manim_colab/: __init__.py  _bootstrap.py  engine.py  gpu.py  magic.py  ready.py  system_deps.py
manim_colab/cells/: c01_system.py  c02_display.py  c03_gpu.py  c04_manim.py  c05_magic.py  c06_config.py
scripts/: run_locally.sh
