[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-colab"
version = "1.1.0"
description = "One-command ManimCE OpenGL rendering on Google Colab (headless, GPU-ready)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "myabdur2121-cpu" }]
keywords = ["manim", "opengl", "google-colab", "animation", "gpu", "headless"]
dependencies = [
    "manim",
    "moderngl",
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/myabdur2121-cpu/manim-opengl-colab"
Repository = "https://github.com/myabdur2121-cpu/manim-opengl-colab"

[tool.setuptools.packages.find]
include = ["manim_colab*"]
