[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-colab"
version = "2.0.0"
description = "OpenGL ManimCE rendering on Google Colab (GPU, in-kernel setup)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "myabdur2121-cpu" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/myabdur2121-cpu/manim-opengl-colab"

[tool.setuptools.packages.find]
include = ["manim_colab*"]
